# meshviewer

./: README.md  TAGS  camera-wasd.hs  meshviewer.cabal  stack.yaml
app/: Main.hs
sample/: cube.stl  monkey.stl
src/: #Vertices.hs#  .#Vertices.hs  GLUT.hs  GLUTCallbacks.hs  LoadMesh.hs  Main.hs  OpenGL.hs  Types.hs  Utils.hs  fragment.glsl  vertex.glsl
src/Meshviewer/: Camera.hs  GLFW.hs  OpenGL.hs  Projection.hs  Types.hs  Viewer.hs  ViewerSettings.hs
src/Meshviewer/OpenGL/: FragmentShader.hs  LoadShaders.hs  Utils.hs  VertexShader.hs
