name:                meshviewer
version:             0.1.0.0
synopsis:            Simple viewer of STL and OBJ meshes written in modern OpenGL
description:         Simple viewer of STL and OBJ meshes written in modern OpenGL
homepage:            https://github.com/nbrk/meshviewer
license:             BSD3
license-file:        LICENSE
author:              Nikolay Burkov
maintainer:          nbrk@linklevel.net
copyright:           2017 Nikolay Burkov
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable             meshviewer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , meshviewer
                     , linear
  default-language:    Haskell2010


library
  hs-source-dirs:      src
  build-depends:       base
                     , monad-loops
                     , linear
                     , bytestring
                     , lens
                     , linear
                     , raw-strings-qq
                     , OpenGL
                     , GLFW-b
  default-language:    Haskell2010
  exposed-modules:     Meshviewer.Types
                     , Meshviewer.Viewer
                     , Meshviewer.ViewerSettings
                     , Meshviewer.Camera
                     , Meshviewer.Projection
                     , Meshviewer.GLFW
                     , Meshviewer.OpenGL
                     , Meshviewer.OpenGL.FragmentShader
                     , Meshviewer.OpenGL.VertexShader
                     , Meshviewer.OpenGL.LoadShaders
                     , Meshviewer.OpenGL.Utils


source-repository head
  type:     git
  location: https://github.com/nbrk/meshviewer
